<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bord_text1">Bord 1</string>
    <string name="bord_text2">Bord 2</string>
    <string name="bord_text3">Bord 3</string>
    <string name="bord_text4">Bord 4</string>
    <string name="bord_text5">Bord 5</string>
    <string name="bord_text6">Bord 6</string>
    <string name="kitchen">Köket</string>
    <string name="waiter">Kypare</string>
    <string name="add_order_text">Ny beställing</string>
    <string name="remove_text">X</string>
    <string name="app_name">Beställningar</string>
    <string name="app_name_login">Login till restaurangen</string>
    <string name="test">Some text</string>
    <string name="reservations">Bokningar</string>
    <string name="login">Login</string>
    <string name="username">Användarnamn</string>
    <string name="password">Lösenord</string>
    <string name="logodesc">The important and beautifull logo of anders</string>
    <string name="textfieldhint">Skriv något i textfältet ;)</string>
    
    <color name="green">#ff99CC00</color>
    <color name="dark_green">#ff669900</color>
    <color name="yellow">#ffFFBB33</color>
    <color name="dark_yellow">#ffFF8800</color>
    
    <style name="Button">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
    <style name="android:widget:Button">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_weight">0.3</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">0dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
</resources>
