<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/order_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#ffffff"
        android:orientation="vertical">
        <Button android:text="@string/bord_text1" android:id="@+id/bord1" android:onClick="table_click" android:background="@drawable/default_button" style="@style/android:widget:Button" />
        <Button android:text="@string/bord_text2" android:id="@+id/bord2" android:onClick="table_click" android:background="@drawable/red_button" style="@style/android:widget:Button" />
        <Button android:text="@string/bord_text3" android:id="@+id/bord3" android:onClick="table_click" android:background="@drawable/green_button" style="@style/android:widget:Button" />
        <Button android:text="@string/bord_text4" android:id="@+id/bord4" android:onClick="table_click" android:background="@drawable/default_button" style="@style/android:widget:Button" />
        <Button android:text="@string/bord_text5" android:id="@+id/bord5" android:onClick="table_click" android:background="@drawable/orange_button" style="@style/android:widget:Button" />
        <Button android:text="@string/bord_text6" android:id="@+id/bord6" android:onClick="table_click" android:background="@drawable/default_button" style="@style/android:widget:Button" />
    </LinearLayout>
</ScrollView>

