<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Orders" >
    <item android:id="@+id/kitchen"
        android:title="@string/kitchen"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/waiter"
        android:title="@string/waiter"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/reservations"
        android:title="@string/reservations"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/loginActivity"
        android:title="@string/login"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>