<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
      <LinearLayout android:id="@+id/header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip">
          <ImageView android:src="@drawable/ic_launcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/logodesc"/>
      </LinearLayout>
 
      <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/username"/>
          <EditText android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"
                    android:singleLine="true"
                    android:hint="@string/textfieldhint"/>
          <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/password"/>
          <EditText android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/textfieldhint"/>
          <Button android:id="@+id/btnLogin"
                  android:onClick="loginButtonClicked"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dip"
                  android:text="@string/login"/>
      </LinearLayout>
 
  </RelativeLayout>
</ScrollView>
